Fix blog post layout problem on mobile

--- a/_sass/layouts/blog.scss
+++ b/_sass/layouts/blog.scss
@@ -120,6 +120,9 @@ body.post {
     font-size: 1rem;
     line-height: 1.25rem;
   }
+  .post-page .doc-content {
+    padding-top: 20px;
+  }
 }
 .blog-page,
 .post-page {
